fix: z-index of machine, shadow, etc.

--- a/components/Landing/2DSlotMachine/machine.module.scss
+++ b/components/Landing/2DSlotMachine/machine.module.scss
@@ -6,7 +6,7 @@
   width: auto;
   left: 50%;
   transform: translateX(-50%);
-  z-index: -1;
+  z-index: -3;
 
   img {
     aspect-ratio: 316 / 534;
